@@ -3,6 +3,7 @@ python-apt (0.7.94.3) UNRELEASED; urgency=low
   [ Julian Andres Klode ]
   * apt/cache.py:
     - Make Cache.get_changes() much (~35x) faster (Closes: #578074).
+    - Make Cache.req_reinstall_pkgs much faster as well.
   * apt/package.py:
     - Decode using utf-8 in installed_files (LP: #407953).
     - Fix fetch_source() to work when source name = binary name (LP: #552400).
